# pdftitle

./: .gitignore  .travis.yml  CHANGELOG.md  DEVELOPMENT.md  Makefile  README.md  README.rst  _test.sh  fixlicenses.sh  pdftitle.py  pylintrc  pyproject.toml  requirements.txt  setup.py  test.sh  test_eliot.sh  test_max2.sh  testc.sh
.circleci/: config.yml
cli_tests/: test.sh  test_basic.sh  test_eliot.sh  test_ligatures.sh  test_max2.sh  test_metadata_did.sh  test_metadata_did_pdfdocencoding.sh  test_metadata_did_utf16be.sh  test_metadata_ms.sh  test_renaming.sh  test_renaming_no_overwrite_issue46.sh  test_translation_heuristic.sh  test_xobject.sh
pdftitle/: PDFTitleException.py  TextOnlyDevice.py  TextOnlyInterpreter.py  TextState.py  __init__.py  constants.py  device.py  exceptions.py  interpreter.py  logging.py  metadata.py  openai_gateway.py  pdftitle.py
src/pdftitle/: __init__.py
test/: Makefile  test_max2.sh
tests/: test_cli.py
